# shed

./: .gitignore  AI_POLICY.md  Cargo.toml  LICENSE  README.md  TEST_COVERAGE_AUDIT.md  TEST_PLAN.md  flake.nix  rustfmt.toml  thing.md
.cargo/: config.toml
doc/: autocmd.txt  builtin.txt  commands.txt  ex.txt  help.txt  jobs.txt  keybinds.txt  param.txt  prompt.txt  redirect.txt  scripting.txt  socket.txt
docs/: my_prompt.md
examples/: cool_prompt.sh  surround_plugin.sh
include/completions/: cd_comp.shed  shopt_comp.shed
nix/: hm-module.nix  module.nix  render_rc.nix  shed_opts.nix
src/: execute.rs  expand.rs  fern.rs  getopt.rs  jobs.rs  main.rs  prelude.rs  procio.rs  shopt.rs  signal.rs  state.rs  tests.rs  testutil.rs
src/builtin/: alias.rs  arrops.rs  autocmd.rs  cd.rs  complete.rs  control_flow.rs  defer.rs  dirstack.rs  echo.rs  eval.rs  exec.rs  export.rs  fixcmd.rs  flowctl.rs  getopts.rs  hash.rs  help.rs  hist.rs  intro.rs  jobctl.rs  keymap.rs  map.rs  mod.rs  msg.rs  pwd.rs  read.rs  resource.rs  seek.rs  set.rs  shift.rs  shopt.rs  source.rs  stash.rs  test.rs  times.rs  trap.rs  varcmds.rs  zoltraak.rs
src/execute/: ifthen.rs  loops.rs  mod.rs  shellcmd.rs
src/expand/: alias.rs  arithmetic.rs  brace.rs  cmdsub.rs  escape.rs  expand_vars.rs  mod.rs  param.rs  prompt.rs  subshell.rs  tilde.rs  util.rs  var.rs  vars.rs
src/libsh/: collections.rs  error.rs  flog.rs  guards.rs  histimport.rs  mod.rs  strops.rs  sys.rs  term.rs  ui.rs  utils.rs
src/parse/: execute.rs  lex.rs  mod.rs  parse.rs
src/prompt/: comp.rs  highlight.rs  history.rs  mod.rs  readline.rs  validate.rs
src/readline/: complete.rs  context.rs  editcmd.rs  highlight.rs  histimport.rs  history.rs  history_old.rs  keys.rs  linebuf.rs  mod.rs  register.rs  term.rs  tests.rs  vicmd.rs  vimode.rs
src/shellenv/: exec_ctx.rs  input.rs  jobs.rs  logic.rs  meta.rs  mod.rs  shenv.rs  shopt.rs  vars.rs
src/state/: jobs.rs  logic.rs  meta.rs  mod.rs  scopes.rs  terminal.rs  util.rs  vars.rs
src/tests/: complete.rs  error.rs  expand.rs  getopt.rs  highlight.rs  lexer.rs  mod.rs  parser.rs  (+5 more)
test_scripts/: cmdsub.sh  multiline.sh
tests/: gen_vi_tests.lua
(+98 files in other folders)
