[package]
name = "fern"
description = "A linux shell written in rust"
publish = false
version = "0.1.0"

edition = "2021"

[profile.release]
debug = true

[dependencies]
bitflags = "2.8.0"
clap = { version = "4.5.38", features = ["derive"] }
glob = "0.3.2"
insta = "1.42.2"
nix = { version = "0.29.0", features = ["uio", "term", "user", "hostname", "fs", "default", "signal", "process", "event", "ioctl"] }
pretty_assertions = "1.4.1"
regex = "1.11.1"
rustyline = { version = "15.0.0", features = [ "derive" ] }

[[bin]]
name = "fern"
path = "src/fern.rs"
