[package]
name = "fern"
description = "A linux shell written in rust"
publish = false
version = "0.1.0"

edition = "2024"

[profile.release]
debug = true

[dependencies]
bitflags = "2.8.0"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.9"
glob = "0.3.2"
log = "0.4.29"
nix = { version = "0.29.0", features = ["uio", "term", "user", "hostname", "fs", "default", "signal", "process", "event", "ioctl", "poll"] }
regex = "1.11.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
vte = "0.15"

[dev-dependencies]
insta = "1.42.2"
pretty_assertions = "1.4.1"

[[bin]]
name = "fern"
