[package]
name = "shed"
description = "A linux shell written in rust"
publish = false
version = "0.6.0"

edition = "2024"

[profile.release]
debug = true

[dependencies]
ariadne = "0.6.0"
bitflags = "2.8.0"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.9"
fnmatch-regex = "0.3.0"
glob = "0.3.2"
itertools = "0.14.0"
log = "0.4.29"
nix = { version = "0.29.0", features = [
		"uio",
		"term",
		"user",
		"resource",
		"hostname",
		"fs",
		"default",
		"signal",
		"process",
		"event",
		"ioctl",
		"poll"
	] }
rand = "0.10.0"
regex = "1.11.1"
scopeguard = "1.2.0"
serde_json = "1.0.149"
smallvec = { version = "1.15.1", features = ["write"] }
tempfile = "3.24.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
vte = "0.15"
yansi = "1.0.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.24.0"

[[bin]]
name = "shed"
